X button wasn't visible on some devices, too big name no longer overflows

--- a/app/globals.css
+++ b/app/globals.css
@@ -249,3 +249,11 @@ select.classic {
   }
 }
 
+
+.line-clamp {
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+  word-break: break-word;
+}
